// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineChart component get data error 1`] = `
<div>
  <div
    class="sc-dkPtRN bShGKG"
  >
    <h2
      class="sc-gsDKAQ ioZYxa"
    >
      Error: Network Error
    </h2>
  </div>
</div>
`;

exports[`LineChart component get data success 1`] = `
<div>
  <div
    class="sc-dkPtRN bShGKG"
  >
    <div
      class="data-group"
    >
      <h5
        class="sc-hKwDye hRiMkt"
      >
        Device
      </h5>
      <div>
        <span
          style="opacity: 1;"
        >
          Day
        </span>
        <span
          style="opacity: 0.3;"
        >
          Week
        </span>
        <span
          style="opacity: 0.3;"
        >
          Month
        </span>
      </div>
    </div>
    <div
      height="404"
      options="[object Object]"
      series="[object Object],[object Object]"
      type="line"
      width="100%"
    />
  </div>
</div>
`;

exports[`LineChart component loading data 1`] = `
<div>
  <div
    class="sc-dkPtRN bShGKG"
  >
    <div
      class="sc-bdvvtL heGnFz"
    >
      <div
        class="spinner-border"
      />
    </div>
  </div>
</div>
`;
